dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(pgms, 0.1.1)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build])
AC_PROG_CC

AC_CONFIG_MACRO_DIR([m4])

dnl Initialize automake
AM_INIT_AUTOMAKE([subdir-objects])

dnl this allows us specify individual liking flags for each target
AM_PROG_CC_C_O 

dnl Initialize Libtool
LT_INIT

dnl check for postgresql
AX_LIB_POSTGRESQL(12.0.0)

AC_CONFIG_FILES(Makefile src/Makefile extension/Makefile)
AC_OUTPUT